[package]
name = "geoapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = { version = "*", features = ["geo-types"] }
geo = "*"
rocket = "0.4.10"
lazy_static = "*"
compress-tools = "*"
serde_derive = "*"
serde_json = "*"
serde = "*"
